--- a/pms/templates/employee/employee_list.html
+++ b/pms/templates/employee/employee_list.html
@@ -18,6 +18,7 @@ endfor %} {% endcomment %}
       <th>Age</th>
       <th>Salary</th>
       <th>Password</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +29,9 @@ endfor %} {% endcomment %}
       <td>{{i.age}}</td>
       <td>{{i.salary}}</td>
       <td>{{i.password}}</td>
+      <td>
+        <a href ="{% url 'delete_employee' i.id %}" class = "btn btn-danger">DELETE</a>
+      </td>
     </tr>
 
     {% endfor %}
