--- a/pms/templates/employee/employee_list.html
+++ b/pms/templates/employee/employee_list.html
@@ -31,6 +31,8 @@ endfor %} {% endcomment %}
       <td>{{i.password}}</td>
       <td>
         <a href ="{% url 'delete_employee' i.id %}" class = "btn btn-danger">DELETE</a>
+        <a href = "{% url 'detail_employee' i.id %}" class ="btn btn-info">DETAIL</a>
+        <a href = "{% url 'update_employee' i.id %}" class = "btn btn-warning">UPDATE</a>
       </td>
     </tr>
 
