--- a/pms/templates/student/student_form.html
+++ b/pms/templates/student/student_form.html
@@ -1,5 +1,10 @@
+{% extends "../base.html" %}
+
+{% block content %}
+
 {% load crispy_forms_tags %}
 <form method="POST">
   {% csrf_token %} {{ form|crispy }}
   <input type="submit" value="Submit" />
 </form>
+{% endblock content %}
