--- a/pms/templates/student/student_list.html
+++ b/pms/templates/student/student_list.html
@@ -1,3 +1,6 @@
+{% extends "../base.html" %} {% comment %} {% load static %} {% endcomment %}
+ {% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,8 +14,12 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    {% comment %}
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    {% endcomment %}
   </head>
   <body>
+    <h1>HELLO CSS RES</h1>
     <table class="table table-dark">
       <thead>
         <tr>
@@ -33,9 +40,15 @@
           <td>{{ stu.age }}</td>
           <td>{{ stu.password }}</td>
           <td>
-            <a href = "{% url 'detail_student' stu.id %}" class="btn btn-success">View</a>
-            <a href = "{% url 'delete_student' stu.id %}" class="btn btn-danger">Delete</a>
-            <a href = "{% url 'update_student' stu.id %}" class="btn btn-primary">Update</a>
+            <a href="{% url 'detail_student' stu.id %}" class="btn btn-success"
+              >View</a
+            >
+            <a href="{% url 'delete_student' stu.id %}" class="btn btn-danger"
+              >Delete</a
+            >
+            <a href="{% url 'update_student' stu.id %}" class="btn btn-primary"
+              >Update</a
+            >
           </td>
         </tr>
         {% endfor %}
@@ -43,3 +56,4 @@
     </table>
   </body>
 </html>
+{% endblock content %}
